examples/fail/layout/struct_self_recursion.dew
// expect error: [E008]
// Struct with self-referential field causes infinite layout.
struct Node { value: Int, next: Node }
def main = fn { 42 -> stdout; };
